# WeatherAnalyzer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
WeatherAnalizator/: Dockerfile  docker-compose.yml  go.mod  main.go  script.js  styles.css  test.html
weather/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
